--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:25.0.0'
     compile(name:'AndroidRangeSeekBar', ext:'aar')
+    compile 'com.android.support:design:25.0.0'
 }
