--- a/OilChartHybrid/package.json
+++ b/OilChartHybrid/package.json
@@ -26,7 +26,8 @@
     "ionic-native": "2.2.3",
     "ionicons": "3.0.0",
     "rxjs": "5.0.0-beta.12",
-    "zone.js": "0.6.26"
+    "zone.js": "0.6.26",
+    "xml2js": "0.4.17"
   },
   "devDependencies": {
     "@ionic/app-scripts": "0.0.45",
@@ -43,7 +44,16 @@
     "cordova-sqlite-storage",
     "cordova-plugin-file",
     "cordova-plugin-x-toast",
-    "cordova-plugin-crosswalk-webview"
+    "cordova-plugin-crosswalk-webview",
+    "cordova-plugin-device@~1.1.3",
+    "cordova-plugin-console@~1.0.4",
+    "cordova-plugin-whitelist@~1.3.0",
+    "cordova-plugin-splashscreen@~4.0.0",
+    "cordova-plugin-statusbar@~2.2.0",
+    "ionic-plugin-keyboard@~2.2.1",
+    "cordova-plugin-crosswalk-webview@~2.2.0",
+    "cordova-sqlite-storage@~1.5.0",
+    "cordova-plugin-x-toast@~2.5.2"
   ],
   "cordovaPlatforms": []
 }
