--- a/OilChartHybrid/ionic.config.json
+++ b/OilChartHybrid/ionic.config.json
@@ -6,7 +6,7 @@
   "proxies": [
     {
       "path": "/rextag",
-      "proxyUrl": "http://rextagpredictions.gosocialdev.eu/"
+      "proxyUrl": "https://rextag.com/OPFIndex/API/"
     }
   ]
 }
