--- a/OilChartHybrid/package.json
+++ b/OilChartHybrid/package.json
@@ -53,7 +53,8 @@
     "ionic-plugin-keyboard@~2.2.1",
     "cordova-plugin-crosswalk-webview@~2.2.0",
     "cordova-sqlite-storage@~1.5.0",
-    "cordova-plugin-x-toast@~2.5.2"
+    "cordova-plugin-x-toast@~2.5.2",
+    "cordova-plugin-inappbrowser"
   ],
   "cordovaPlatforms": []
 }
